# AzureOpenAI

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: endpoints.py
core/: rag_service.py
db/: queries.py
sql/: action_tracker.sql  overdue_cap_tasks.sql  overdue_ost.sql
utils/: helpers.py
